Existing incorrect code

--- a/Jabong.html
+++ b/Jabong.html
@@ -5,76 +5,241 @@
     <link href="styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+<div class="">
     <section class="sidebar">
         <h2>Jabong</h2>
         <div class="catalogue">
             <ul>
-                <li>
-                    <a href="#">Bags</a>
-                    <a href="#">Dresses</a>
-                    <a href="#">Accessories</a>
-                    <a href="#">Jwellery</a>
-                    <a href="#">Bags</a>
-                    <a href="#">Dresses</a>
-                    <a href="#">Accessories</a>
-                    <a href="#">Jwellery</a>
-                    <a href="#">Bags</a>
-                    <a href="#">Dresses</a>
-                    <a href="#">Accessories</a>
-                    <a href="#">Jwellery</a>
-                    <a href="#">Bags</a>
-                    <a href="#">Dresses</a>
-                    <a href="#">Accessories</a>
-                    <a href="#">Jwellery</a>
-                    <a href="#">Bags</a>
-                    <a href="#">Dresses</a>
-                    <a href="#">Accessories</a>
-                    <a href="#">Jwellery</a>
-                    <a href="#">Bags</a>
-                    <a href="#">Dresses</a>
-                    <a href="#">Accessories</a>
-                    <a href="#">Jwellery</a>
-                    <a href="#">Bags</a>
-                    <a href="#">Dresses</a>
-                    <a href="#">Accessories</a>
-                    <a href="#">Jwellery</a>
-                    <a href="#">Accessories</a>
-                    <a href="#">Jwellery</a>
-                    <a href="#">Bags</a>
-                    <a href="#">Dresses</a>
-                    <a href="#">Accessories</a>
-                    <a href="#">Jwellery</a>
-                    <a href="#">Accessories</a>
-                    <a href="#">Jwellery</a>
-                    <a href="#">Bags</a>
-                    <a href="#">Dresses</a>
-                    <a href="#">Accessories</a>
-                    <a href="#">Jwellery</a>
-                    <a href="#">Accessories</a>
-                    <a href="#">Jwellery</a>
-                    <a href="#">Bags</a>
-                    <a href="#">Dresses</a>
-                    <a href="#">Accessories</a>
-                    <a href="#">Jwellery</a>
-                    <a href="#">Accessories</a>
-                    <a href="#">Jwellery</a>
-                    <a href="#">Bags</a>
-                    <a href="#">Dresses</a>
-                    <a href="#">Accessories</a>
-                    <a href="#">Jwellery</a>
-                    <a href="#">Accessories</a>
-                    <a href="#">Jwellery</a>
-                    <a href="#">Bags</a>
-                    <a href="#">Dresses</a>
-                    <a href="#">Accessories</a>
-                    <a href="#">Jwellery</a>
-                    <a href="#">Accessories</a>
-                    <a href="#">Jwellery</a>
-                    <a href="#">Bags</a>
-                    <a href="#">Dresses</a>
-                    <a href="#">Accessories</a>
-                    <a href="#">Jwellery</a>
-                </li>
+                <li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li>
+                <li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li><li><a href="#">Bags</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Jwellery</a></li>
             </ul>
         </div>
     </section>
@@ -325,6 +490,6 @@
         <p>If you need text wrapping around images, there really aren't any alternatives for float. Speaking of which, check out this rather clever technique for wrapping text around irregular shapes. But for page layout, there definitely are choices. Eric Sol right here on A List Apart has an article on Faux Absolute Positioning, which is a very interesting technique that in many ways combines the flexibility of floats with the strength of absolute positioning. CSS3 has the Template Layout Module that, when widely adopted, will prove to be the page layout technique of choice.</p>
 
     </section>
-
+</div>
 </body>
 </html>
